# soros-ai

./: package.json  pnpm-lock.yaml
bullbear/: package.json  pnpm-lock.yaml  process-env.d.ts
bullbear/src/app/api/signals/user/[address]/: route.ts
bullbear/src/app/api/strategy/[id]/: route.ts
bullbear/src/app/api/strategy/all/: route.ts
bullbear/src/app/api/strategy/create/: route.ts
bullbear/src/db/: index.ts  schema.ts
bullbear/src/db/repositories/: SignalRepository.ts  StrategyRepository.ts  index.ts
bullbear/src/types/: strategy.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/landingPage/: CTASection.tsx  ExampleStrategy.tsx  FeatureSection.tsx  HeroSection.tsx  HowItWorks.tsx
src/components/shared/: Footer.tsx  Navbar.tsx
toolService/: pyproject.toml
toolService/schema/: rpc.proto  tools.proto
toolservice/: .gitignore  pyproject.toml
toolservice/src/toolservice/: main.py  scripts.py  toolcall_service.py
toolservice/src/toolservice/agent/: __init__.py  analyst.py  refiner.py
toolservice/src/toolservice/config/: config.py
toolservice/src/toolservice/outputs/: __init__.py  signal.py  strategy.py
toolservice/src/toolservice/schema/: rpc.proto  tools.proto
toolservice/src/toolservice/tools/: __init__.py  call_indicators.py  get_strategies.py  market_data.py
toolservice/src/toolservice/tools/intepreters/: __init__.py  macd.py  rsi.py  sma.py
