[project]
name = "toolservice"
version = "0.1.0"
description = ""
authors = [
    {name = "PatrickOjiambo",email = "pashrick237@students.uonbi.ac.ke"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio-tools (>=1.73.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
