[project]
name = "toolservice"
version = "0.1.0"
description = ""
authors = [
    {name = "PatrickOjiambo",email = "pashrick237@students.uonbi.ac.ke"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "grpcio-tools (>=1.73.1,<2.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "agno (>=1.7.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "toolservice", from = "src"}]
[tool.poetry.scripts]
generate_protos = "toolservice.scripts:generate_protos"
start_server = "toolservice.scripts:start_server"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
