[project]
name = "toolservice"
version = "0.1.0"
description = ""
authors = [
    {name = "PatrickOjiambo",email = "pashrick237@gmail.com"}
]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.12"
agno = "^1.7.5"
ta-lib = "^0.6.4"
yfinance = "^0.2.65"
openai = "^1.97.0"
grpcio-tools = "^1.73.1"
grpcio-health-checking = "^1.73.1"
grpcio-reflection = "^1.73.1"
[tool.poetry]
packages = [{include = "toolservice", from = "src"}]
[tool.poetry.scripts]
generate_protos = "toolservice.scripts:generate_protos"
start_server = "toolservice.scripts:start_server"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
